[metadata]
name = pydqueue
version = 0.2.2
author = Matthias Probst
author_email = matthias.probst@kit.edu
description = A python sample package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/matthiasprobst/pydqueue
classifiers =
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta"

[options]
packages = find:
python_requires = !=3.8
include_package_data = True
install_requires =
    numpy


[options.extras_require]
test =
    pytest
    pytest-cov
docs =
    jupyterlab
    sphinx_book_theme
    nbsphinx
complete =
    %(test)s
    %(docs)s

[tool:pytest]
python_files = test_*.py
testpaths = tests
